# meetup_auto_rsvp

./: .gitignore  README.md  config.json  pyproject.toml
meetup/: config.py  constants.py  enums.py  main.py
meetup/client/: meetup_client.py
meetup/models/: browser.py  cookies.py  event.py  group.py  headers.py  query.py  rsvp.py
meetup/queries/: get_event_with_id.py  group_events_query.py  groups_query.py  rsvp_event_query.py
src/: config.py  main.py
src/client/: browsers.py  meetup_client.py
src/models/: cookies.py  event.py  headers.py  query.py  rsvp.py
src/queries/: get_event_with_id.py  group_events_query.py  groups_query.py  rsvp_event_query.py
