[tool.poetry]
name = "meetup"
version = "0.1.0"
description = "An Application to auto/bulk rsvp to events of groups on meetup.com website"
authors = ["Ajeem Ahmad <ahmedazim7804@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pydantic = "^2.10.6"
browser-cookie3 = "^0.20.1"
loguru = "^0.7.3"
click = "^8.1.8"
prettytable = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
